# prism

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  act.mk  pyproject.toml
.claude/: settings.local.json
.github/workflows/: code-quality.yml  deploy-hf.yml  security.yml
docs/: CNAME  index.html
src/prism/: app.py  constants.py  crew.py  main.py
src/prism/config/: agents.yaml  tasks.yaml
src/prism/tools/: calculation_tools.py
src/prism/utils/: gradio_helpers.py
tests/: conftest.py  test_crew.py  test_integration.py  test_tools.py
